--- a/Front_page.html
+++ b/Front_page.html
@@ -12,6 +12,7 @@
         <div class="stars"></div>
         <div class="twinkling"></div>
         <div class="clouds"></div>
+        
     </div>
     <div class="password_container">
         <h1>Password Generator</h1>
@@ -31,7 +32,7 @@
             <label>Includes Symbols</label>
             <input class="checkbox" id="sym_box" type="checkbox" checked />
         </form>
-        <button id="btn1">Generate Password</button>
+        <button id="btn1">Generate</button>
     </div>
     <script type="text/javascript" src="script.js"></script>
 </body>
