--- a/Front_page.html
+++ b/Front_page.html
@@ -16,7 +16,7 @@
     </div>
     <div class="password_container">
         <h1>Password Generator</h1>
-        <div id="DisplayResults" class="DisplayPW">[Display Here]</div>
+        <div id="DisplayResults" class="DisplayPW"></div>
         <form class="form_container">
             <label>Password Length</label>
             <div class="password_length_container">
